--- a/_config.yml
+++ b/_config.yml
@@ -84,3 +84,11 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+  
+# Collections
+
+collections:
+  academia:
+    output: true
+  fun:
+    output: true
