--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Thinking about it.
 
 # Short bio or description (displayed in the header)
-description: A blog on (mostly) academic subjects written by members of the Biolinguistics Initiative Barcelona. 
+description: A blog on (mostly) academic subjects written by members of the Cognitive Biology of Language research group from Barcelona. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
