--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: bioling_bcn
+  twitter: cbl_bcn
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -57,6 +57,8 @@ permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
+
+markdown: kramdown
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
